[project]
name = "sonda-marte-api"
version = "0.1.0"
description = ""
authors = [
    {name = "michelle",email = "pichau.michelle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0" 
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "typos (>=1.47.0,<2.0.0)"
]
